<resources>
    <string name="app_name">Easy Learner</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="add_lesson">Add Lesson</string>
    <string name="date_format">%d / %d / %d</string>
    <string name="time_formate">%d : %d</string>
    <string name="payment_value">Payment Value</string>
    <string name="value_in_huf">Value in HUF</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="full_name">Full name</string>
    <string name="creat_your_profile">Create your profile</string>
    <string name="id_card_number">ID Card Number</string>
    <string name="take_photo">Take Photo</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="teach_something_else">Teach something else!</string>
    <string name="learn_something_else">Learn something else!</string>
    <string name="profile_communication">Communication: %.1f</string>
    <string name="profile_punctuality">Punctuality: %.1f</string>
    <string name="profile_knowledge">Knowledge: %.1f</string>
    <string name="learn">Learn</string>
    <string name="lessons">Lessons</string>
    <string name="lectures">Lectures</string>
    <string name="teach">Teach</string>
    <string name="user">User</string>
    <string name="my_profile">My Profile</string>
    <string name="my_lessons">My Lessons</string>
</resources>
